ajuste de imagen

--- a/tasks/templates/diseños/inicio.html
+++ b/tasks/templates/diseños/inicio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Bienvenido a Tu Gestor de Tareas</h1>
-    <p>Aqui puede gestionar todas tus tareas pendientes. Navega por las opciones siguientes: </p>
+    <p>Aqui puede gestionar todas tus tareas pendientes. Navega por el menu: </p>
     <nav class="navbar">
         <ul>
             <li>
