--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<img src="{% static 'lap.jpeg' %}" width="100">
+<img class="logo" src="{% static 'lap.jpeg' %}" alt="">
 
 
 {% endblock %}
